// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MathEquation adapter construct builds with attributes 1`] = `
Object {
  "align": "left",
  "alt": undefined,
  "label": "mockLabel",
  "latex": "mockEquations",
  "size": "3em",
}
`;

exports[`MathEquation adapter construct builds without attributes 1`] = `
Object {
  "align": "center",
  "alt": undefined,
  "label": "",
  "latex": "",
  "size": "1em",
}
`;

exports[`MathEquation adapter toJSON builds a JSON representation 1`] = `
Object {
  "content": Object {
    "align": "left",
    "alt": undefined,
    "label": "",
    "latex": "test",
    "size": "1em",
  },
}
`;
